--- a/chatgpt/pubspec.yaml
+++ b/chatgpt/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   build_runner: ^2.3.3
   flutter_bloc: ^8.1.2
+  http: ^0.13.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
